<resources>
    <string name="app_name">Transico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ovel Heslop</string>
    <string name="nav_header_subtitle">ovel.heslop@codezero.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="driver_menu_schedules">Schedule</string>
    <string name="driver_menu_time_log">Time Log</string>
    <string name="driver_menu_report_log">Report Log</string>
    <string name="driver_menu_profile_manager">Profile Manager</string>

    <!--Strings for the scheduling design-->
    <string name="sch_route">Route</string>
    <string name="sch_time">Time</string>
    <string name="sch_inspector">Inspector</string>
    <string name="sch_busModel">Bus Model: </string>
    <string name="sch_busNumber">183</string>
    <string name="sch_busNumberSubscript">EX</string>
    <string name="via_route_label">Via Route</string>
    <string name="via_route_example">Constant Spring Road</string>
    <string name="bus_number_example">10N5645</string>
    <string name="inspector_example">Tom Clark</string>
    <string name="bus_icon">bus Icon</string>
    <string name="location_icon">location icon</string>
    <string name="route_example">Half Way Tree to DownTown</string>
    <string name="time_example">Dec 19, 2018 : 5:00 AM to 12:00 PM</string>
    <string name="sch_busNumber_label">Bus #</string>


    <string name="daySun">SUN</string>
    <string name="dayMon">MON</string>
    <string name="dayTue">TUE</string>
    <string name="dayWed">WED</string>
    <string name="dayThu">THU</string>
    <string name="dayFri">FRI</string>
    <string name="daySat">SAT</string>

    <string name="date_range">07</string>
    <string name="no_internet">you are not connected to the internet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_schedule_fragment">Hello Driver schedule fragment</string>
    <string name="hello_tl_fragment">Hello Time Log fragrament</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_rl_fragment">Hello Report Log fragment</string>
    <string name="title_activity_profile_manager">ProfileManagerActivity</string>

    <string name="hello_profile_activity">Hello From Profile Activity</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_time_log">Time Log</string>
    <string name="title_report_log">Report Log</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_status_label">Status:</string>
    <string name="schedule_status_value">Active</string>
    <string name="inspector_example2">Mary Brown</string>
    <string name="location_example2">Havendale</string>
    <string name="location_example">Half Way Tree</string>
    <string name="checkin_label">Check In</string>
    <string name="checkout_label">Check Out</string>

    <!--Time Log Strings-->
    <string name="tl_title_date">Dec 17</string>

    <string name="title_activity_change_password">ChangePasswordActivity</string>

    <string name="title_activity_new_report_log">Create New Report Log</string>

    <string name="title_activity_group_section">GroupSectionActivity</string>

    <string name="title_activity_title_select">TitleSelectActivity</string>
    <string name="title_activity_response">Response Activity</string>

    <string name="group_title">
        What is group section
    </string>

    <string name="title_selection_header">
        Why do I have to select a title
    </string>

    <string name="group_description">
        Please note that your report is not delivered to a specific member of the group.
        The report is sent to the group to which all users of that group have access to the report,
        however, only the floor supervisor can assign a specific user to action the log.
    </string>

    <string name="title_description">
        By selecting a title for your report, this help us to better understand your issue and
        fast tract your report to the right persons to offer assistance.
    </string>

    <string name="lorem">
        <b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.\n\nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>

    <string name="report_log_display_title">\@Title</string>
    <string name="report_log_display_group">\@Group</string>
    <string name="report_log_display_bus">\@Bus</string>
    <string name="report_log_display_status">\@Status</string>

    <string name="title_activity_entry">Commuters</string>
    <string name="title_activity_registration_main">Activity</string>

</resources>
