<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_departure_board_24px"
            android:title="@string/driver_menu_schedules" />
        <item
            android:id="@+id/nav_time_log"
            android:icon="@drawable/ic_baseline_alarm_on_24px"
            android:title="@string/driver_menu_time_log" />
        <item
            android:id="@+id/nav_report_log"
            android:icon="@drawable/ic_baseline_trending_up_24px"
            android:title="@string/driver_menu_report_log" />
        <item
            android:id="@+id/nav_profile_manager"
            android:icon="@drawable/ic_baseline_person_24px"
            android:title="@string/driver_menu_profile_manager" />
    </group>

</menu>
