<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_schedule"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_departure_board_24px"
        android:title="@string/title_schedule"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_time_log"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_alarm_on_24px"
        android:title="@string/title_time_log"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_report_log"
        android:enabled="true"

        android:icon="@drawable/ic_baseline_trending_up_24px"
        android:title="@string/title_report_log"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24px"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom"
        />

</menu>
