<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="91dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:cardBackgroundColor="@color/background"
        app:cardElevation="3dp">

        <RelativeLayout
            android:id="@+id/bi_layout"
            android:layout_width="match_parent"
            android:layout_height="107dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="92dp"
                android:layout_marginBottom="41dp"
                android:text="@string/sch_inspector"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="92dp"
                android:layout_marginBottom="26dp"
                android:text="@string/sch_busModel"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_busModel"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView6"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="99dp"
                android:layout_marginBottom="-2dp"
                android:layout_toEndOf="@+id/textView6"
                android:text="10C371"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_inspector"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView5"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/textView5"
                android:text="Tom Clarke"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="290dp"
                android:layout_height="24dp"
                android:layout_alignBottom="@+id/tv_route"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="92dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="-20dp"
                android:text="5:00 AM - 7:00 AM"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_route"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="92dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:ems="@android:integer/config_mediumAnimTime"
                android:fontFamily="sans-serif"
                android:text="HWT To Downtown"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_busNumber"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/tv_inspector"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_view_round"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sch_busNumber"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>